--- a/.github/workflows/pr_unstable.yml
+++ b/.github/workflows/pr_unstable.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-24.04
+    env:
+      VCS_PAT: ${{secrets.PERSONAL_ACCESS_TOKEN}}
     steps:
       - run: |
           echo "REPOSITORY_OWNER=$(jq -r .repository.owner.login $GITHUB_EVENT_PATH)" >> $GITHUB_ENV
@@ -16,6 +18,8 @@ jobs:
           echo "SOURCE_COMMIT=$(jq -r .pull_request.head.sha $GITHUB_EVENT_PATH)" >> $GITHUB_ENV
       - run: |
           git init
-          git remote add origin "https://${{secrets.VCS_PAT}}@github.com/${REPOSITORY_OWNER}/${REPOSITORY_NAME}.git"
+          git remote add origin "https://${VCS_PAT}@github.com/${REPOSITORY_OWNER}/${REPOSITORY_NAME}.git"
           git fetch --depth=1 origin "${SOURCE_COMMIT}"
           git checkout FETCH_HEAD
+      - run: |
+          .github/sh/pr/unstable.sh
