--- a/.github/workflows/pr_unstable.yml
+++ b/.github/workflows/pr_unstable.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-24.04
     env:
-      VCS_PAT: ${{secrets.PERSONAL_ACCESS_TOKEN}}
+      VCS_PAT: ${{secrets.VCS_PAT}}
     steps:
       - run: |
           echo "REPOSITORY_OWNER=$(jq -r .repository.owner.login $GITHUB_EVENT_PATH)" >> $GITHUB_ENV
@@ -22,4 +22,5 @@ jobs:
           git fetch --depth=1 origin "${SOURCE_COMMIT}"
           git checkout FETCH_HEAD
       - run: |
+          ls -al
           .github/sh/pr/unstable.sh
