--- a/.github/workflows/pr_unstable.yml
+++ b/.github/workflows/pr_unstable.yml
@@ -11,16 +11,11 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - run: |
-          echo "REPOSITORY_OWNER=$(jq -r .repository.owner.login $GITHUB_EVENT_PATH)" >> $GITHUB_ENV
-          echo "REPOSITORY_NAME=$(jq -r .repository.name $GITHUB_EVENT_PATH)" >> $GITHUB_ENV
-          echo "SOURCE_COMMIT=$(jq -r .pull_request.head.sha $GITHUB_EVENT_PATH)" >> $GITHUB_ENV
-      - run: |
-          git init
-          git remote add origin "https://github.com/${REPOSITORY_OWNER}/${REPOSITORY_NAME}.git"
-          git fetch --depth=1 origin "${SOURCE_COMMIT}"
-          git checkout FETCH_HEAD
+          echo "REPOSITORY_OWNER=${{github.event.repository.owner.login}}" >> $GITHUB_ENV
+          echo "REPOSITORY_NAME=${{github.event.repository.name}}" >> $GITHUB_ENV
+          echo "SOURCE_COMMIT=${{github.event.pull_request.head.sha}}" >> $GITHUB_ENV
       - env:
           VCS_PAT: ${{secrets.VCS_PAT}}
         run: |
-          cp -r .github/sh/unstable .
-          bash .github/sh/pr/unstable.sh
+          docker run --platform='linux/amd64' -id --name container "docker.io/kepocnhh/ci-java-lib-amd64/0.1b"
+          docker exec container /usr/local/bin/bash -c 'unstable/vcs/pr.sh'
