--- a/.github/workflows/pr_unstable.yml
+++ b/.github/workflows/pr_unstable.yml
@@ -17,5 +17,5 @@ jobs:
       - env:
           VCS_PAT: ${{secrets.VCS_PAT}}
         run: |
-          docker run -id --name container kepocnhh/ci-java-lib-amd64/0.1b
+          docker run -id --name container kepocnhh/ci-java-lib-amd64:0.1b
           docker exec container /usr/local/bin/bash -c unstable/vcs/pr.sh
