--- a/.github/workflows/pr_unstable.yml
+++ b/.github/workflows/pr_unstable.yml
@@ -11,11 +11,10 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - run: |
-          echo "REPOSITORY_OWNER=${{github.event.repository.owner.login}}" >> $GITHUB_ENV
-          echo "REPOSITORY_NAME=${{github.event.repository.name}}" >> $GITHUB_ENV
-          echo "SOURCE_COMMIT=${{github.event.pull_request.head.sha}}" >> $GITHUB_ENV
-      - env:
-          VCS_PAT: ${{secrets.VCS_PAT}}
-        run: |
-          docker run -id --name container kepocnhh/ci-java-lib-amd64:0.1b
+          docker run \
+           -e REPOSITORY_NAME="${{github.event.repository.owner.login}}" \
+           -e REPOSITORY_OWNER="${{github.event.repository.name}}" \
+           -e SOURCE_COMMIT="${{github.event.pull_request.head.sha}}" \
+           -e VCS_PAT="${{secrets.VCS_PAT}}" \
+           -id --name container docker.io/kepocnhh/ci-java-lib-amd64:0.1b
           docker exec container /usr/local/bin/bash -c unstable/vcs/pr.sh
