--- a/.github/workflows/pr_unstable.yml
+++ b/.github/workflows/pr_unstable.yml
@@ -17,4 +17,4 @@ jobs:
            -e SOURCE_COMMIT="${{github.event.pull_request.head.sha}}" \
            -e VCS_PAT="${{secrets.VCS_PAT}}" \
            -id --name container docker.io/kepocnhh/ci-jlu-amd64:0.4b
-          docker exec container /usr/local/bin/bash -c unstable/vcs/pr.sh
+          docker exec container /usr/local/bin/bash -c unstable/pr.sh
