--- a/.github/workflows/pr_unstable.yml
+++ b/.github/workflows/pr_unstable.yml
@@ -18,4 +18,4 @@ jobs:
            -e TARGET_BRANCH="${{github.event.pull_request.base.ref}}" \
            -e VCS_PAT="${{secrets.VCS_PAT}}" \
            -id --name container docker.io/kepocnhh/multitool-amd64:0.3.0c
-          docker exec container /usr/local/bin/bash -c 'cp -r $mt/java/lib/unstable/pr.sh'
+          docker exec container /usr/local/bin/bash -c '$mt/java/lib/unstable/pr.sh'
