--- a/.github/workflows/pr_unstable.yml
+++ b/.github/workflows/pr_unstable.yml
@@ -12,14 +12,14 @@ jobs:
     steps:
       - run: |
           docker run \
-           -e REPOSITORY_OWNER="${{github.event.repository.owner.login}}" \
-           -e REPOSITORY_NAME="${{github.event.repository.name}}" \
-           -e SOURCE_COMMIT="${{github.event.pull_request.head.sha}}" \
-           -e TARGET_BRANCH="${{github.event.pull_request.base.ref}}" \
-           -e VCS_PAT="${{secrets.VCS_PAT}}" \
+           -e REPOSITORY_OWNER='${{github.event.repository.owner.login}}' \
+           -e REPOSITORY_NAME='${{github.event.repository.name}}' \
+           -e SOURCE_COMMIT='${{github.event.pull_request.head.sha}}' \
+           -e TARGET_BRANCH='${{github.event.pull_request.base.ref}}' \
+           -e VCS_PAT='${{secrets.VCS_PAT}}' \
            -e KEYSTORE='.mt/keystore.pkcs12' \
-           -e KEYSTORE_PASSWORD="${{secrets.KEYSTORE_PASSWORD}}" \
-           -e KEY_ALIAS="${{secrets.KEY_ALIAS}}" \
+           -e KEYSTORE_PASSWORD='${{secrets.KEYSTORE_PASSWORD}}' \
+           -e KEY_ALIAS='${{secrets.KEY_ALIAS}}' \
            -id --name container 'docker.io/kepocnhh/multitool-amd64:0.3.1c'
-          docker exec container /usr/local/bin/bash -c "echo '${{secrets.KEYSTORE}}' | base64 --decode -o ${KEYSTORE}"
+          docker exec container /usr/local/bin/bash -c 'echo ${{secrets.KEYSTORE}} | base64 --decode -o ${KEYSTORE}'
           docker exec container /usr/local/bin/bash -c '$mt/java/lib/unstable/pr.sh'
