--- a/.github/workflows/pr_unstable.yml
+++ b/.github/workflows/pr_unstable.yml
@@ -10,7 +10,9 @@ jobs:
   build:
     runs-on: ubuntu-24.04
     steps:
-      - run: |
+      - env:
+          KEYSTORE_PASSWORD: ${{secrets:KEYSTORE_PASSWORD}}
+        run: |
           docker run \
            -e REPOSITORY_OWNER='${{github.event.repository.owner.login}}' \
            -e REPOSITORY_NAME='${{github.event.repository.name}}' \
@@ -18,7 +20,8 @@ jobs:
            -e TARGET_BRANCH='${{github.event.pull_request.base.ref}}' \
            -e VCS_PAT='${{secrets.VCS_PAT}}' \
            -e KEYSTORE='.mt/keystore.pkcs12' \
-           -e KEYSTORE_PASSWORD='${{secrets.KEYSTORE_PASSWORD}}' \
-           -e KEY_ALIAS='${{secrets.KEY_ALIAS}}' \
+           -e KEYSTORE_PASSWORD="${KEYSTORE_PASSWORD}" \
+           -e KEY_ALIAS='debug' \
            -id --name container 'docker.io/kepocnhh/multitool-amd64:0.3.1c'
+          docker exec container /usr/local/bin/bash -c 'echo ${{secrets.KEYSTORE}} | base64 --decode -o ${KEYSTORE}'
           docker exec container /usr/local/bin/bash -c '$mt/java/lib/unstable/pr.sh'
