--- a/.github/workflows/pr_unstable.yml
+++ b/.github/workflows/pr_unstable.yml
@@ -20,5 +20,5 @@ jobs:
            -e KEYSTORE='.mt/keystore.pkcs12' \
            -e KEY_ALIAS='debug' \
            -id --name container 'docker.io/kepocnhh/multitool-amd64:0.3.1c'
-          docker exec container /usr/local/bin/bash -c 'echo "${{secrets.KEYSTORE}}" | base64 --decode -o ${KEYSTORE}'
+          docker exec container /usr/local/bin/bash -c 'echo "${{secrets.KEYSTORE}}" | base64 -d > ${KEYSTORE}'
           docker exec container /usr/local/bin/bash -c '$mt/java/lib/unstable/pr.sh'
