--- a/.github/workflows/pr_unstable.yml
+++ b/.github/workflows/pr_unstable.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - env:
           KEYSTORE_PASSWORD: "${{secrets.KEYSTORE_PASSWORD}}"
+          MVN_SNAPSHOT_PASSWORD: "${{secrets.MVN_SNAPSHOT_PASSWORD}}"
         run: |
           docker run \
            -e REPOSITORY_OWNER='${{github.event.repository.owner.login}}' \
@@ -26,6 +27,8 @@ jobs:
            -e TG_BOT_ID='${{secrets.TG_BOT_ID}}' \
            -e TG_BOT_TOKEN='${{secrets.TG_BOT_TOKEN}}' \
            -e TG_CHAT_ID='${{secrets.TG_CHAT_ID}}' \
-           -id --name container 'docker.io/kepocnhh/multitool-amd64:0.4.0c'
+           -e MVN_SNAPSHOT_USER="${{secrets.MVN_SNAPSHOT_USER}}" \
+           -e MVN_SNAPSHOT_PASSWORD="${MVN_SNAPSHOT_PASSWORD}" \
+           -id --name container 'docker.io/kepocnhh/multitool-amd64:0.5.0c'
           docker exec container /usr/local/bin/bash -c 'echo "${{secrets.KEYSTORE}}" | base64 -d > ${KEYSTORE}'
           docker exec container /usr/local/bin/bash -c '$mt/java/lib/unstable/pr.sh'
