--- a/.github/workflows/pr_unstable.yml
+++ b/.github/workflows/pr_unstable.yml
@@ -32,6 +32,6 @@ jobs:
            -e TG_CHAT_ID='${{secrets.TG_CHAT_ID}}' \
            -e MVN_SNAPSHOT_USER="${{secrets.MVN_SNAPSHOT_USER}}" \
            -e MVN_SNAPSHOT_PASSWORD="${MVN_SNAPSHOT_PASSWORD}" \
-           -id --name container 'docker.io/kepocnhh/multitool-amd64:0.6.2c'
+           -id --name container 'docker.io/kepocnhh/multitool-0.6.2-amd64:6d'
           docker exec container /usr/local/bin/bash -c 'echo "${{secrets.KEYSTORE}}" | base64 -d > ${KEYSTORE}'
           docker exec container /usr/local/bin/bash -c '$mt/java/lib/unstable/pr.sh'
